# RAG-Playground

./: context.md  pyproject.toml
backend/app/: Dockerfile  config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/rag/: chain.py  embedder.py  loader.py  retriever.py  splitter.py  vector_store.py
backend/chroma_db/623ca375-9352-480a-86da-a9df7b66faf7/: index_metadata.pickle
frontend/: package-lock.json  package.json  postcss.config.js  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/component/: ChatInterface.tsx  DocumentUploader.tsx
learning/: DTP.md  Learning.md
